[package]
name = "keylogger"
version = "0.1.1"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Register various user actions - keystrokes on the computer keyboard, movements and mouse keystrokes"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/keylogger"
repository = "https://github.com/deadblackclover/keylogger"
keywords = ["keylogger", "keyboard", "mouse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.34.0"
device_query = "0.2.4"

[package.metadata.deb]
maintainer = "DEADBLACKCLOVER <deadblackclover@protonmail.com>"
copyright = "2020, DEADBLACKCLOVER <deadblackclover@protonmail.com>"
license-file = ["LICENSE", "0"]
extended-description = "Register various user actions - keystrokes on the computer keyboard, movements and mouse keystrokes"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/keylogger", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/keylogger/README", "644"],
]
