[package]
name = "keylogger"
version = "0.2.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Register various user actions - keystrokes on the computer keyboard, movements and mouse keystrokes"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/keylogger"
repository = "https://github.com/deadblackclover/keylogger"
keywords = ["keylogger", "keyboard", "mouse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4", features = ["derive"] }
device_query = "1.1.3"

[package.metadata.deb]
maintainer = "DEADBLACKCLOVER <deadblackclover@protonmail.com>"
copyright = "2020, DEADBLACKCLOVER <deadblackclover@protonmail.com>"
license-file = ["LICENSE", "0"]
extended-description = "Register various user actions - keystrokes on the computer keyboard, movements and mouse keystrokes"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/keylogger", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/keylogger/README", "644"],
]
